[project]
name = "majordom-zigbee"
version = "0.1.3"
description = "Zigbee integration for MajorDom — bridges Zigbee devices into the MajorDom language."
authors = [{ name = "Mark Parker", email = "mark@parker-programs.com" }]
readme = "README.md"
# AGPL-3.0 is required, not chosen: this package is effectively a wrapper around the GPL-3.0
# zigpy / zigpy-znp / bellows stack, so the combined work must carry a compatible copyleft
# license. Commercial (non-AGPL) terms are available separately — see the partnership link.
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["majordom", "zigbee", "zigpy", "smart-home", "home-automation", "iot", "integration", "coordinator", "802-15-4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "majordom-integration-sdk (>=0.1,<1.0)",
    "zigpy (>=0.88.0,<0.89.0)",
    "zigpy-znp (>=0.14.2,<0.15.0)",
    "bellows (>=0.49.1,<0.50.0)",
]

[project.urls]
Homepage = "https://majordom.io"
Documentation = "https://docs.majordom.io/device-integration"
Repository = "https://github.com/MajorDom-Systems/integration-zigbee"
Issues = "https://github.com/MajorDom-Systems/integration-zigbee/issues"
"Commercial licensing" = "https://parker-industries.org/partnership"

[dependency-groups]
dev = [
    "poethepoet (>=0.36.0,<1.0.0)",
    "ty", "ruff", "pip-audit",
    "pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "pytest-repeat",
    "pytest-benchmark", "pytest-profiling", "pytest-resource-usage", "coverage",
    "pympler", "psutil", "faker",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "majordom_zigbee" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["once"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E402"]

# The zigpy ControllerApplication test double intentionally uses loose signatures — scoped to
# conftest.py (the only test file that needs it) so the rest of the suite stays fully checked.
[[tool.ty.overrides]]
include = ["tests/conftest.py"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"

[tool.poe.tasks.install]
shell = """
poetry install
echo '#!/bin/sh\npoetry run poe check' > .git/hooks/pre-commit
chmod +x .git/hooks/pre-commit
echo "Pre-commit hook installed."
"""

[tool.poe.tasks.check]
shell = """
code=0
echo "\nRunning ruff lint:"
poetry run ruff check --fix || code=1
echo "\nRunning ruff format:"
poetry run ruff format || code=1
echo "\nRunning ty:"
poetry run ty check || code=1
echo "\nRunning pytest:"
poetry run pytest --cov=majordom_zigbee --cov-report=xml || code=1
echo "\nRunning poetry build:"
poetry build || code=1
echo "\nRunning poetry check:"
poetry check || code=1
${ci:+git diff --exit-code}
exit $code
"""
args = [{ name = "ci", type = "boolean" }]
